# libC

dynamic_array/: CMakeLists.txt  library.c  library.h
libC_src/: CMakeLists.txt  library.h
libC_testing/: CMakeLists.txt
testing/: CMakeLists.txt  main.c
